Update spring project